--- a/app/spa/style/project.css
+++ b/app/spa/style/project.css
@@ -4,23 +4,33 @@
     position: relative;
     overflow: hidden;
     font-size: 0.6rem;
+    font-family: Ionicons;
 }
 
 .project .project_nav {
     width: 100%;
-    height: 1.68rem;
-    background-color: #59dbff;
+    height: 1.5rem;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
+    background-color: #54c590;
+    box-shadow: 0 0.1rem 0.2rem rgba(122, 122, 122, 0.6);
+}
+
+.project .project_nav span {
+    width: 100%;
+    line-height: 1.5rem;
+    padding: 0 0.5rem;
+    font-size: 0.6rem;
+    color: #fff;
 }
 
 .project .project_scroll {
     width: 100%;
     background-color: #f5f5f5;
     position: absolute;
-    top: 1.68rem;
+    top: 1.5rem;
     left: 0;
     bottom: 1.44rem;
     overflow: hidden;
@@ -66,34 +76,17 @@
 }
 
 /*swiper部分*/
-.project .project_swiper {
-    height: auto;
+.project .swiper-pagination-bullet-active {
+    opacity: 1;
+    background: #54c590;
+}
+
+.project .swiper-pagination-bullet {
+    width: 0.12rem;
+    height: 0.12rem;
+    margin: 0 0.1px;
+}
+
+.project .swiper-slide img {
     width: 100%;
-    position: relative;
-}
-
-.project .swiper-wrapper {
-    width: 300%;
-    height: 3rem;
-    overflow: hidden;
-}
-
-.project .swiper-slide {
-    width: 100%;
-    float: left;
-}
-
-.project .swiper-wrapper div:nth-child(1) {
-    background-color: #59dbff;
-    height: 3rem;
-}
-
-.project .swiper-wrapper div:nth-child(2) {
-    background-color: #ff0959;
-    height: 3rem;
-}
-
-.project .swiper-wrapper div:nth-child(3) {
-    background-color: #fe78ff;
-    height: 3rem;
 }
