--- a/app/spa/style/project.css
+++ b/app/spa/style/project.css
@@ -11,6 +11,7 @@
     width: 100%;
     height: 1.5rem;
     position: absolute;
+    z-index: 1;
     top: 0;
     left: 0;
     background-color: #54c590;
