--- a/app/spa/style/skills.css
+++ b/app/spa/style/skills.css
@@ -39,6 +39,21 @@
     background-color: #ececec;
 }
 
+
+.skills .skills_down_cell {
+    width: 100%;
+    height: 0;
+    position: relative;
+    text-align: center;
+    overflow: hidden;
+    line-height: 100%;
+}
+
+.skills .skills_down_cell img {
+    display: inline-block;
+    vertical-align: middle;
+}
+
 .skills .left, .skills .right {
     width: 50%;
     box-sizing: border-box;
@@ -76,9 +91,8 @@
 }
 
 .skills .content img {
-    height: 0.9rem;
-    width: 0.9rem;
-    background-color: #ff784d;
+    height: 1rem;
+    width: 1rem;
     margin-left: 0.3rem;
 }
 
@@ -101,9 +115,33 @@
     display: inline-block;
     height: 0.4rem;
     width: 0.4rem;
-    background-color: #ff784d;
     margin-left: 0.3rem;
     margin-bottom: 0.2rem;
+    position: relative;
+}
+
+.skills .rank i:before {
+    content: "";
+    position: absolute;
+    height: 0.4rem;
+    width: 0.4rem;
+    font-family: "Ionicons";
+    font-size: 0.39rem;
+    top: -0.17rem;
+    left: 0.08rem;
+    color: #54c590;
+}
+
+.skills .usetime i:before {
+    content: "";
+    position: absolute;
+    height: 0.4rem;
+    width: 0.4rem;
+    font-family: "Ionicons";
+    font-size: 0.37rem;
+    top: -0.17rem;
+    left: 0.1rem;
+    color: #54c590;
 }
 
 .skills .usetime span, .skills .rank span {
